--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
     <div class="wrapper">
         <!-- Header -->
-        <header class="header">
+        <header class="header" id="home">
             <div class="container">
                 <nav class="menu">
                     <ul class="menu__list">
-                        <li class="menu__item"><a class="menu__link">Home</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#home">Home</a></li>
                         <li class="menu__item"><a class="menu__link" href="#gallery">Gallery</a></li>
                         <li class="menu__item"><a class="menu__link" href="#about">About</a></li>
                     </ul>
@@ -94,10 +94,10 @@
             </div>
         </div>
         <!-- Chapter 3 -->
-        <div class="team" id="about">
+        <div class="team">
             <div class="container">
                 <div class="team__block">
-                    <div class="team__block-text">
+                    <div class="team__block-text" id="about">
                         <h3>Our team</h3>
                         <div class="team__text">
                             <div class="team__line"></div>
@@ -108,16 +108,15 @@
                         <img class="team__img" src="img/our-team.png" alt="">
                     </div>
                     <div class="team__block-img">
-                        <img class="team__comets" src="img/comets_chapter-3.png" alt="">
-                        <img class="team__planet" src="img/planet_chapter-3.png" alt="">
+                        <img class="team__planet" src="img/img_chapter-3.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
         <!-- Chapter 4 -->
-        <div class="work" id="gallery">
+        <div class="work">
             <div class="container">
-                <div class="work__blok">
+                <div class="work__blok" id="gallery">
                     <div class="work__block-text">
                         <h3>My Creative Works Latest <span class="color-text">Projects</span></h3>
                         <p>I have selected and mentioned here some of my latest projects to share with you</p>
