--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </main>
         <!-- Chapter 2 -->
-        <div class="revards">
+        <section class="revards">
             <div class="container">
                 <div class="revards__block">
                     <div class="revards__text">
@@ -92,9 +92,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Chapter 3 -->
-        <div class="team">
+        <section class="team">
             <div class="container">
                 <div class="team__block">
                     <div class="team__block-text" id="about">
@@ -112,9 +112,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Chapter 4 -->
-        <div class="work">
+        <section class="work">
             <div class="container">
                 <div class="work__blok" id="gallery">
                     <div class="work__block-text">
@@ -130,9 +130,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Chapter 5 -->
-        <div class="reviews">
+        <section class="reviews">
             <div class="container">
                 <div class="reviews__block">
                     <h3 class="reviews__header">Reviews</h3>
@@ -248,7 +248,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
